--- a/src/index.html
+++ b/src/index.html
@@ -14,35 +14,54 @@
   </head>
 
   <body>
-    <div class="container">
-      <h1>Welcome to Tauri!</h1>
+
+      <div class="type container" onclick="toggle_type()">
+          <p><span class="encryption selected">Encrypt</span> <span class="decryption">Decrypt</span></p>
+      </div>
+
+    <div class="encryption container">
+        <h1>Audicrypt</h1>
 
       <div class="row">
         <a href="https://tauri.app" target="_blank">
-          <img src="/assets/tauri.svg" class="logo tauri" alt="Tauri logo" />
-        </a>
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-          target="_blank"
-        >
-          <img
-            src="/assets/javascript.svg"
-            class="logo vanilla"
-            alt="JavaScript logo"
-          />
+          <img src="/assets/tauri.svg" class="logo tauri" alt="Audicrypt logo" />
         </a>
       </div>
-
-      <p>Click on the Tauri logo to learn more about the framework</p>
 
       <div class="row">
         <div>
-          <input id="greet-input" placeholder="Enter a name..." />
-          <button type="button" onclick="greet()">Greet</button>
+          <input id="encrypt-input" placeholder="Enter the text to encrypt" />
+          <button type="button" onclick="choose_file_encryption()">Choose File</button>
         </div>
       </div>
+      
+      <div class="row">
+          <button type="button" onclick="encrypt()">Encrypt</button>
+      </div>
 
-      <p id="greet-msg"></p>
+      <p id="encryption-msg"></p>
+    </div>
+
+    <div class="decryption container">
+        <h1>Audicrypt</h1>
+
+      <div class="row">
+        <a href="https://tauri.app" target="_blank">
+          <img src="/assets/tauri.svg" class="logo tauri" alt="Audicrypt logo" />
+        </a>
+      </div>
+
+      <div class="row">
+        <div>
+          <button type="button" onclick="choose_file_decryption()">Choose File</button>
+        </div>
+      </div>
+      
+      <div class="row">
+          <button type="button" onclick="decrypt()">Decrypt</button>
+      </div>
+
+      <p id="decryption-msg"></p>
     </div>
   </body>
 </html>
