--- a/src/index.html
+++ b/src/index.html
@@ -19,15 +19,15 @@
             <h1>Audicrypt</h1>
 
           <div class="row">
-            <a href="https://tauri.app" target="_blank">
-              <img src="/assets/tauri.svg" class="logo tauri" alt="Audicrypt logo" />
+            <a href="https://audicrypt.tech" target="_blank">
+              <img src="/assets/logo.png" class="logo tauri" alt="Audicrypt logo" />
             </a>
           </div>
       </div>
 
       <div class="container">
-          <p class="type" onclick="toggle_type()"><span class="encryption selected">Encrypt</span> <span class="decryption">Decrypt</span></p>
         <div class="encryption container">
+          <p class="type" onclick="toggle_type()"><span class="encryption selected">Encrypt</span> <span class="decryption">Decrypt</span></p>
 
           <div class="row">
             <div>
